# django-guest-user

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  test.yml
docs/: advanced.rst  api.rst  conf.py  config.rst  contrib.rst  index.rst  requirements.txt  setup.rst  usage.rst
guest_user/: __init__.py  admin.py  app_settings.py  apps.py  backends.py  checks.py  decorators.py  exceptions.py  forms.py  functions.py  mixins.py  models.py  settings.py  signals.py  urls.py  views.py
guest_user/contrib/allauth/: README.md  __init__.py  apps.py  signals.py
guest_user/contrib/tos/: apps.py  middleware.py
guest_user/management/commands/: delete_expired_users.py
guest_user/migrations/: 0001_initial.py  0002_alter_guest_options.py
guest_user/templates/guest_user/: convert_form.html  convert_success.html
guest_user/templatetags/: guest_user.py
test_proj/: conftest.py  models.py  settings.py  test_allauth.py  test_backends.py  test_decorators.py  test_functions.py  test_managers.py  test_models.py  test_settings.py  test_views.py  urls.py  views.py  wsgi.py
test_proj/migrations/: 0001_initial.py
test_proj/templates/: dummy.html  guest.html
