[tool.poetry]
name = "django-guest-user"
version = "0.5.0"
description = "A Django app that lets visitors interact with your site without registration."
authors = [
  "Julian Wachholz <julian@wachholz.ch>",
]
readme = "README.md"
license = "MIT"

repository = "https://github.com/julianwachholz/django-guest-user"
homepage = "https://github.com/julianwachholz/django-guest-user"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0"
]

packages = [
    { include = "guest_user" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
tox = "^3.24.4"
Django = "^3.2.9"
django-allauth = "^0.45.0"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_proj.settings"
minversion = "6.0"
addopts = "--no-migrations"
