[tool.poetry]
name = "django-guest-user"
version = "0.5.5"
description = "A Django app that lets visitors interact with your site without registration."
authors = [
  "Julian Wachholz <julian@wachholz.ch>",
  "blag <blag@users.noreply.github.com>",
]
readme = "README.md"
license = "MIT"

repository = "https://github.com/julianwachholz/django-guest-user"
homepage = "https://github.com/julianwachholz/django-guest-user"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
]

packages = [{ include = "guest_user" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
django = "^4.2.5"
django-allauth = "^0.57.0"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
sphinx = "<7.2.0"
sphinx-rtd-theme = "^1.3.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_proj.settings"
minversion = "7.0"
addopts = "--no-migrations"
